tests/ui/abi/interrupt-invalid-signature.msp430.stderr
error: invalid signature for `extern "msp430-interrupt"` function
  --> $DIR/interrupt-invalid-signature.rs:41:41
   |
LL | extern "msp430-interrupt" fn msp430_arg(_byte: u8) {}
   |                                         ^^^^^^^^^
   |
   = note: functions with the "msp430-interrupt" ABI cannot have any parameters or return type
help: remove the parameters and return type
   |
LL - extern "msp430-interrupt" fn msp430_arg(_byte: u8) {}
LL + extern "msp430-interrupt" fn msp430_arg() {}
   |

error: invalid signature for `extern "msp430-interrupt"` function
  --> $DIR/interrupt-invalid-signature.rs:65:46
   |
LL | extern "msp430-interrupt" fn msp430_ret() -> u8 {
   |                                              ^^
   |
   = note: functions with the "msp430-interrupt" ABI cannot have any parameters or return type
help: remove the parameters and return type
   |
LL - extern "msp430-interrupt" fn msp430_ret() -> u8 {
LL + extern "msp430-interrupt" fn msp430_ret() {
   |

error: invalid signature for `extern "msp430-interrupt"` function
  --> $DIR/interrupt-invalid-signature.rs:112:48
   |
LL | fn msp430_ptr(_f: extern "msp430-interrupt" fn(u8) -> u8) {
   |                                                ^^     ^^
   |
   = note: functions with the "msp430-interrupt" ABI cannot have any parameters or return type
help: remove the parameters and return type
   |
LL - fn msp430_ptr(_f: extern "msp430-interrupt" fn(u8) -> u8) {
LL + fn msp430_ptr(_f: extern "msp430-interrupt" fn()) {
   |

error: aborting due to 3 previous errors

